recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:15: error: not found: value squareKoch
  squareKoch(levels-1,length*0.4)
  ^PentaKoch:17: error: not found: value squareKoch
  squareKoch(levels-1,length*0.4)
  ^